--- a/Application/src/main/res/values/strings.xml
+++ b/Application/src/main/res/values/strings.xml
@@ -6,23 +6,9 @@
     <string name="request_permission">Esta aplicacion requiere el permiso de camara.</string>
     <string name="title_activity_settings">Configuracion</string>
 
-    <!-- Preference Titles -->
-    <string name="messages_header">Messages</string>
-    <string name="sync_header">Sync</string>
-
-    <!-- Messages Preferences -->
-    <string name="signature_title">Your signature</string>
-    <string name="reply_title">Default reply action</string>
-
-    <!-- Sync Preferences -->
-    <string name="sync_title">Sync email periodically</string>
-    <string name="attachment_title">Download incoming attachments</string>
-    <string name="attachment_summary_on">Automatically download attachments for incoming emails
-    </string>
-    <string name="attachment_summary_off">Only download attachments when manually requested</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="viewCreationError">No se pudo iniciar la aplicacion</string>
     <string name="Accept">Aceptar</string>
     <string name="cameraPermission">La aplicacion necesita el permiso de camara para continuar</string>
+    <string name="cameraInterrupted">La camara ha sido interrumpida por otro proceso</string>
+    <string name="camera2NotSupported">Este dispositivo no soporta la API de Camera2</string>
 </resources>
